release for 0.0.3
