# API/monitor.js
@@ -3,7 +3,7 @@ var config = require('../config')
 var log4js = require('log4js');
 var monitor = require('../monitor')
 var logger = log4js.getLogger('API/monitor');
-var myOrgName = config.fabric.orgName;
+var myOrgIndex = config.fabric.orgIndex;
 var response = require('./response')
 var Dbs = require('../Db')
 var passport = require('passport');
